# lon

./: .gitignore  .travis.yml  README.md  app  com.github.Appadeia.lon.json  meson.build
data/: com.github.Appadeia.lon.appdata.xml  com.github.Appadeia.lon.desktop  com.github.Appadeia.lon.gresource.xml  com.github.Appadeia.lon.gschema.xml  meson.build
data/css/: cold.css  hot.css  mildcold.css  mildhot.css  style.css  verycold.css  veryhot.css
debian/: changelog  control  copyright  rules
po/: com.github.Appadeia.lon.pot
src/: Application.vala  Main.vala  Window.vala
src/configs/: Constants.vala
src/controllers/: AppController.vala
src/views/: AppView.vala
tests/: assert.vala  test.vala
